编辑手账部分-文字部分做好了

--- a/YouJi/YouJi/classes/ShouZhang(手账)/Controller/ShouZhangViewController.xib
+++ b/YouJi/YouJi/classes/ShouZhang(手账)/Controller/ShouZhangViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShouZhangViewController">
             <connections>
+                <outlet property="tabBarView" destination="dd5-i5-0fU" id="tgx-Az-GrS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
