--- a/YouJi/YouJi/classes/My(我的)/View/XZQTableViewCellTwo.xib
+++ b/YouJi/YouJi/classes/My(我的)/View/XZQTableViewCellTwo.xib
@@ -23,12 +23,6 @@
                         <color key="textColor" red="0.30980392159999998" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="嘿嘿" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckR-F1-T88">
-                        <rect key="frame" x="306" y="19" width="41" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <color key="textColor" red="0.30980392159999998" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zo4-u1-8sv">
                         <rect key="frame" x="389" y="22" width="15" height="23"/>
                         <constraints>
@@ -37,17 +31,30 @@
                         </constraints>
                         <state key="normal" image="My_rightReturnArrow"/>
                     </button>
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="嘿嘿" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hRE-bp-sIx">
+                        <rect key="frame" x="277" y="14" width="100" height="34"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="N6t-gX-rTW"/>
+                        </constraints>
+                        <color key="textColor" red="0.30980392156862746" green="0.32549019607843138" blue="0.32549019607843138" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="hRE-bp-sIx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="277" id="M3G-Zj-23W"/>
                     <constraint firstItem="Zo4-u1-8sv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="389" id="ZhY-Wh-wqP"/>
                     <constraint firstItem="MKu-gE-OuP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="gwo-nl-wjV"/>
                     <constraint firstItem="MKu-gE-OuP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="m4A-Jg-X2h"/>
                     <constraint firstItem="Zo4-u1-8sv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22" id="pA5-6T-NhQ"/>
-                    <constraint firstItem="ckR-F1-T88" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="qWN-AV-n8U"/>
-                    <constraint firstItem="ckR-F1-T88" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="306" id="yC4-YT-o3I"/>
+                    <constraint firstItem="hRE-bp-sIx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="vzC-5q-C1F"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="nameTextField" destination="hRE-bp-sIx" id="8bj-0P-2sK"/>
+            </connections>
             <point key="canvasLocation" x="-58" y="-32"/>
         </tableViewCell>
     </objects>
