--- a/YouJi/YouJi/classes/My(我的)/View/XZQTableViewCellTwo.xib
+++ b/YouJi/YouJi/classes/My(我的)/View/XZQTableViewCellTwo.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,8 +31,8 @@
                         </constraints>
                         <state key="normal" image="My_rightReturnArrow"/>
                     </button>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="嘿嘿" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hRE-bp-sIx">
-                        <rect key="frame" x="277" y="14" width="100" height="34"/>
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="嘿嘿" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hRE-bp-sIx">
+                        <rect key="frame" x="277" y="19" width="100" height="25.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="N6t-gX-rTW"/>
@@ -48,7 +48,7 @@
                     <constraint firstItem="MKu-gE-OuP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="gwo-nl-wjV"/>
                     <constraint firstItem="MKu-gE-OuP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="m4A-Jg-X2h"/>
                     <constraint firstItem="Zo4-u1-8sv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22" id="pA5-6T-NhQ"/>
-                    <constraint firstItem="hRE-bp-sIx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="vzC-5q-C1F"/>
+                    <constraint firstItem="hRE-bp-sIx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="vzC-5q-C1F"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
